--- a/DajSveApp/app/src/main/res/values/colors.xml
+++ b/DajSveApp/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="crna_transparent">#b3000000</color>
     <color name="white_transparent">#7cffffff</color>
     <color name="siva">#cb303030</color>
+
+    <color name="blagocrvena">#FF7E7C</color>
+    <color name="blagozelena">#6D916E</color>
+    <color name="blagoplava">#696991</color>
 </resources>
