--- a/DajSveApp/app/src/main/res/values/colors.xml
+++ b/DajSveApp/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="siva">#cb303030</color>
 
     <color name="blagocrvena">#FF7E7C</color>
+    <color name="blagatamnocrvena">#F2695F</color>
     <color name="blagozelena">#6D916E</color>
     <color name="blagoplava">#696991</color>
 </resources>
