--- a/DajSveApp/app/src/main/res/layout/map_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/map_fragment.xml
@@ -1,16 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/frame"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical" android:weightSum="1"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-<android.support.v7.widget.RecyclerView
-android:layout_height="match_parent"
-android:layout_width="match_parent"
-android:id="@+id/rv"
-    android:configChanges="keyboardHidden|orientation|screenSize">
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.8">
 
-</android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+        <android.support.v7.widget.RecyclerView
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:id="@+id/rv"
+            android:configChanges="keyboardHidden|orientation|screenSize">
+
+        </android.support.v7.widget.RecyclerView>
+
+
+
+
+    </FrameLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="100dp"
+        android:layout_weight="0.2"
+        android:weightSum="1">
+
+        <SearchView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/map_search"
+            android:layout_weight="0.3"></SearchView>
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/map_spinner"
+            android:layout_weight="0.7"></Spinner>
+
+
+    </LinearLayout>
+
+</LinearLayout>
+
