--- a/DajSveApp/app/src/main/res/layout/admin_login_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/admin_login_fragment.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:backgroundTint="@color/blaga_ljubicasta"
+    android:id="@+id/admin_login_fragment_id"
     android:layout_height="match_parent">
 
     <ImageView
@@ -69,3 +71,4 @@
 
 
 </RelativeLayout>
+
