--- a/DajSveApp/app/src/main/res/layout/admin_statistika_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/admin_statistika_fragment.xml
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:id="@+id/admin_statistika_fragment"
     android:layout_height="match_parent">
 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent" android:id="@+id/admin_statistika_fragment_id"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:text="Broj pokretanja aplikacije" android:textSize="20sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="15dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:text="- Ovaj tjedan" android:textSize="10sp" android:textColor="#31A118"
+        android:layout_marginLeft="30dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:text="- Prošli tjedan" android:textSize="10sp" android:textColor="#396AFF"
+        android:layout_marginLeft="30dp"/>
 
     <lecho.lib.hellocharts.view.ComboLineColumnChartView
         android:id="@+id/chart"
@@ -19,7 +38,7 @@
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:weightSum="1"
-        android:background="@color/blagatamnocrvena"
+        android:background="#F2517E"
         android:layout_height="130dp">
 
         <LinearLayout
@@ -114,5 +133,39 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:text="Najčešće korisničke pretrage" android:textSize="20sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="15dp"/>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:id="@+id/najcesce_pretrage"></ListView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#A19E97"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"/>
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
+        android:textColor="#ffffff"
+        android:id="@+id/button_odjava"
+        android:layout_marginBottom="20dp"
+        android:text="Odjavi se"
+        android:background="#F2517E"/>
 
 </LinearLayout>
+
+</ScrollView>
